--- a/index.html
+++ b/index.html
@@ -608,33 +608,27 @@
                    <div class="md:flex">
                        <div class="md:w-1/2">
                            <div class="relative h-96 md:h-full">
-                               <img src="images/team/lead-image.jpg" alt="Dhrub Kumar Jha" class="w-full h-full object-cover">
+                               <img src="images/team/dhrub.jpg" alt="Dhrub Kumar Jha" class="w-full h-full object-cover">
                                <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-                               <!-- Contact Info -->
-                               <div class="absolute bottom-4 left-4 flex flex-col space-y-2">
-                                   <div class="flex space-x-3">
-                                       <a href="https://linkedin.com/in/dhrub-jha" target="_blank"
+                               <div class="absolute bottom-4 left-4 flex space-x-3">
+                                   <a href="https://linkedin.com/in/dhrub-jha" target="_blank"
                                       class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
-                                       <i class="fab fa-linkedin-in text-white"></i>
-                                   </a>
-                                       <a href="https://github.com/Dhrub-jha" target="_blank"
-                                      class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
-                                       <i class="fab fa-github text-white"></i>
-                                   </a>
-                                   </div>
-                                   <span class="bg-white/10 backdrop-blur-md px-3 py-1 rounded-full text-white text-sm">
-                                       8296019911
-                                   </span>
+                                           <i class="fab fa-linkedin-in text-white"></i>
+                                       </a>
+                                       <a href="https://instagram.com/dhrub_kj" target="_blank"
+                                          class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                                           <i class="fab fa-instagram text-white"></i>
+                                       </a>
                                </div>
                            </div>
                        </div>
                        <div class="md:w-1/2 p-8 md:p-12">
                            <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-blue-500/10 text-blue-400 mb-4">
-                               Club President
+                               Club Lead
                            </div>
                            <h3 class="text-2xl font-bold mb-4">Dhrub Kumar Jha</h3>
                            <p class="text-gray-400 leading-relaxed mb-6">
-                               Leading The Turing Club's vision and mission to create an innovative tech community at Jain University.
+                               CSE student specializing in AI and ML, proficient in Python and SQL. Leads initiatives in AI research and development, fostering innovation and collaboration.
                            </p>
                            <a href="mailto:Dhrub.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors">
                                Dhrub.theturingclub@gmail.com
@@ -646,9 +640,155 @@
 
            <!-- Core Team Grid -->
            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-               <!-- Would you like me to continue with the rest of the team members? -->
+               <!-- Krithik R -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/krithik.jpg" alt="Krithik R" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/krithik-r124" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                           <a href="https://instagram.com/krithik879" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-instagram text-white"></i>
+                           </a>
                        </div>
                    </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-purple-500/10 text-purple-400 mb-4">
+                           Outreach Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Krithik R</h3>
+                       <p class="text-gray-400 text-sm mb-4">Senior Designer & Outreach Lead</p>
+                       <a href="mailto:krithikr.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors text-sm">
+                           krithikr.theturingclub@gmail.com
+                       </a>
+                   </div>
+               </div>
+
+               <!-- Thanish Chinnappa KC -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/thanish.jpg" alt="Thanish Chinnappa KC" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/heytanix" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                           <a href="https://instagram.com/heytanix" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-instagram text-white"></i>
+                           </a>
+                       </div>
+                   </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-pink-500/10 text-pink-400 mb-4">
+                           Design Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Thanish Chinnappa KC</h3>
+                       <p class="text-gray-400 text-sm mb-4">Leading design and creative initiatives</p>
+                       <a href="mailto:thanishc.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors text-sm">
+                           thanishc.theturingclub@gmail.com
+                       </a>
+                   </div>
+               </div>
+
+               <!-- Aditya Katakam -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/aditya.jpg" alt="Aditya Katakam" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/aditya-katakam" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                       </div>
+                   </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-blue-500/10 text-blue-400 mb-4">
+                           Technical Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Aditya Katakam</h3>
+                       <p class="text-gray-400 text-sm mb-4">Motorhead and tech enthusiast</p>
+                       <a href="mailto:katakam.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors text-sm">
+                           katakam.theturingclub@gmail.com
+                       </a>
+                   </div>
+               </div>
+
+               <!-- Tejas R U -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/tejas.jpg" alt="Tejas R U" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/tejas-r-u" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                           <a href="https://instagram.com/rutejas" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-instagram text-white"></i>
+                           </a>
+                       </div>
+                   </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-orange-500/10 text-orange-400 mb-4">
+                           Media Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Tejas R U</h3>
+                       <p class="text-gray-400 text-sm mb-4">Chief of Videography and Photography</p>
+                       <a href="mailto:trunav.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors text-sm">
+                           trunav.theturingclub@gmail.com
+                       </a>
+                   </div>
+               </div>
+
+               <!-- Farha Naaz -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/farha.jpg" alt="Farha Naaz" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/farha-naaz" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                       </div>
+                   </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-yellow-500/10 text-yellow-400 mb-4">
+                           Events Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Farha Naaz</h3>
+                       <p class="text-gray-400 text-sm mb-4">Chief of Event Management & PR</p>
+                       <a href="mailto:farha.theturingclub@gmail.com" class="text-gray-400 hover:text-white transition-colors text-sm">
+                           farha.theturingclub@gmail.com
+                       </a>
+                   </div>
+               </div>
+
+               <!-- Yohanan Theza Ghissing -->
+               <div class="glass-card rounded-xl overflow-hidden group">
+                   <div class="relative">
+                       <img src="images/team/yohanan.jpg" alt="Yohanan Theza Ghissing" class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105">
+                       <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300"></div>
+                       <div class="absolute bottom-4 left-4 flex space-x-3 transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 transition-all">
+                           <a href="https://linkedin.com/in/yohanan10" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-linkedin-in text-white"></i>
+                           </a>
+                           <a href="https://instagram.com/__yohanan_10" target="_blank" class="bg-white/10 backdrop-blur-md p-2 rounded-full hover:bg-white/20 transition-all">
+                               <i class="fab fa-instagram text-white"></i>
+                           </a>
+                       </div>
+                   </div>
+                   <div class="p-6">
+                       <div class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-500/10 text-green-400 mb-4">
+                           Social Media Lead
+                       </div>
+                       <h3 class="text-xl font-bold mb-2">Yohanan Theza Ghissing</h3>
+                       <p class="text-gray-400 text-sm mb-4">Managing social media presence and engagement</p>
+                       <p class="text-gray-400 text-sm">From Darjeeling, The Queen of hills. Currently in 2nd year of AIML.</p>
+                   </div>
+               </div>
+           </div>
+       </div>
    </section>
 
    <!-- 7. Featured Projects -->
